crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__disconnected_with_a_server_tree_at_100x30.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"┌ Servers ─────────────┐┌ Local ~/projects ────────────────────────────┐┌ Remote (not connected) ──────────────────────┐"
"│▸ Personal            ││  Name                      Size   Modified   ││                                              │"
"│▾ Work                ││  ..                                          ││                                              │"
"│    prod-web          ││  docs/                            09-29 06:00││                                              │"
"│    staging           ││  src/                             09-28 10:00││                                              │"
"│  home-nas            ││  README.md                   2.1K 09-29 10:00││                                              │"
"│                      ││  notes.txt                    340 09-30 09:00││                                              │"
"│                      ││  big.iso                     1.5G 08-24 00:00││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││       Select a server and press Enter.       │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"└──────────────────────┘└──────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                Nothing queued. Select files and press F5 to transfer.                                │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Enter connect · n new · e edit · Del delete · i import · F1 help · q quit                                              "
