crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__failed.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "bottom_screen(BottomTab::Failed, true, |_| {})"
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│No servers yet. Pr││  Name              Size   Modified   ││  Name              Size   Modified   │"
"│                  ││  ..                                  ││  ..                                  │"
"│                  ││  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│                  ││  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│                  ││  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (3) │ Completed (2) │ Failed (1) │ Log │ Terminal ─────────────────────────────────────────┐"
"│  Local                   Remote                  Reason                                          │"
"│✗ …me/me/projects/big.iso /var/www/big.iso        connection reset by peer                  retry │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│r retry · R retry all · Del remove                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" p pause · Del remove · r retry · C clear · F1 help · q quit                                        "
