crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__help.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│N┌ Help ────────────────────────────────────────────────────────────────────────────────────────┐ │"
"│ │Everywhere                                                                                    │ │"
"│ │Tab             focus the next area                                                           │0│"
"│ │Shift-Tab       focus the previous area                                                       │0│"
"│ │F1 ?            this help                                                                     │0│"
"│ │Ctrl-r          refresh the focused pane                                                      │ │"
"│ │Alt-1           bottom tab: Queue                                                             │ │"
"│ │Alt-2           bottom tab: Completed                                                         │ │"
"│ │Alt-3           bottom tab: Failed                                                            │ │"
"│ │Alt-4           bottom tab: Log                                                               │ │"
"│ │Alt-5           bottom tab: Terminal                                                          │ │"
"│ │F9              show / hide the server tree                                                   │ │"
"│ │F10             maximize / restore the bottom panel                                           │ │"
"│ │q Ctrl-q        quit                                                                          │ │"
"│ │File panes                                                                                    │ │"
"│ │Up Down         move the cursor                                                               │ │"
"│ │PgUp PgDn       page up / down                                                                │ │"
"│ │Home End        first / last entry                                                            │ │"
"│ │Enter           open a folder, or transfer a file to the other side                           │ │"
"└─│Backspace       parent folder                                                                 │─┘"
"┌ │Space Ins       select / unselect, move down                                                  │─┐"
"│ │*               invert the selection                                                          │ │"
"│ │Ctrl-a          select all                                                                    │ │"
"│ │F5 t            transfer the selection (or the cursor row) to the other side                  │ │"
"│ │F7              new folder (current pane)                                                     │ │"
"│ │                                                                                              │ │"
"│ │Up/Down PgUp/PgDn scroll · Esc or F1 close                                                    │ │"
"└─└──────────────────────────────────────────────────────────────────────────────────────────────┘─┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · F1 help · q quit    "
