crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__move_picker.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&dialog_ui(&app, picker), &app)"
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│▸ Personal        ││  Name              Size   Modified   ││                                      │"
"│▸ Work            ││  ..                                  ││                                      │"
"│  home-nas        ││  docs/                    09-29 06:00││                                      │"
"│                  ││  src/                     09-28 10:00││                                      │"
"│                  ││  README.md           2.1K 09-29 10:00││                                      │"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││   Select a server and press Enter.   │"
"│                  ││     ┌ Move to ─────────────────────────────────────┐                         │"
"│                  ││     │ / (top level)                                │                         │"
"│                  ││     │ /Personal                                    │                         │"
"│                  ││     │ /Work                                        │                         │"
"│                  ││     │                                              │                         │"
"│                  ││     │Up/Down choose · Enter move · Esc cancel      │                         │"
"│                  ││     └──────────────────────────────────────────────┘                         │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                      Nothing queued. Select files and press F5 to transfer.                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · F1 help · q quit    "
