crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__prompt_certificate.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: prompt_screen(cert)
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│No servers yet. Pr││  Name              Size   Modified   ││  Name              Size   Modified   │"
"│                  ││  ..                                  ││  ..                                  │"
"│                  ││  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│                  ││  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│                  ││  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│             ┌ Untrusted certificate ───────────────────────────────────────────────┐             │"
"│             │ftp.example.org:21 — the certificate is self-signed.                  │             │"
"│             │Subject: CN=ftp.example.org                                           │             │"
"│             │Issuer:  CN=ftp.example.org                                           │             │"
"│             │Expires: 2027-01-01 00:00:00 UTC                                      │             │"
"│             │SHA-256:                                                              │             │"
"│             │9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08      │             │"
"│             │                                                                      │             │"
"│             │y trust once · a trust always · n / Esc reject                        │             │"
"│             └──────────────────────────────────────────────────────────────────────┘             │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                      Nothing queued. Select files and press F5 to transfer.                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · g go to · . dotfiles · s sort · F1 help · q quit                                       "
