crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__prompt_conflict.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: prompt_screen(conflict)
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│No servers yet. Pr││  Name              Size   Modified   ││  Name              Size   Modified   │"
"│                  ││  ..                                  ││  ..                                  │"
"│                  ││  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│                  ││  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│                  ││  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│             ┌ File exists ─────────────────────────────────────────────────────────┐             │"
"│             │index.php                                                             │             │"
"│             │New:          4.3K  09-30 10:00                                       │             │"
"│             │Existing:     3.8K  09-28 20:00                                       │             │"
"│             │                                                                      │             │"
"│             │[ ] a  apply to all remaining files                                   │             │"
"│             │o overwrite · n if newer · r resume · s skip · k keep both · Esc skip │             │"
"│             └──────────────────────────────────────────────────────────────────────┘             │"
"│                  ││                                      ││                                      │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                      Nothing queued. Select files and press F5 to transfer.                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · g go to · . dotfiles · s sort · F1 help · q quit                                       "
